--- a/Lucas/milestones.ipynb
+++ b/Lucas/milestones.ipynb
@@ -1253,9 +1253,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 213,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Cameroon': 0.26545864,\n",
+       " 'Cambodia': 0.16718971,\n",
+       " 'Lebanon': 0.06825445,\n",
+       " 'Uzbekistan': 0.3423205,\n",
+       " 'Ethiopia': 1.18015,\n",
+       " 'Malaysia': 0.3272276,\n",
+       " 'Mexico': 1.26190788,\n",
+       " 'Kenya': 0.53771296,\n",
+       " 'Ivory Coast': 0.26378274,\n",
+       " 'Nepal': 0.29609623,\n",
+       " 'Papua New Guinea': 0.08947027,\n",
+       " 'India': 13.80004385,\n",
+       " 'Nigeria': 2.06139587,\n",
+       " 'Philippines': 1.13261,\n",
+       " 'Dominican Republic': 0.10882996,\n",
+       " 'Indonesia': 2.73523615,\n",
+       " 'Georgia': 0.03989167,\n",
+       " 'Colombia': 0.50882891,\n",
+       " 'Togo': 0.08278724,\n",
+       " 'Burkina Faso': 0.21510181,\n",
+       " 'Comoros': 0.00869601,\n",
+       " 'Mali': 0.20250833,\n",
+       " 'Guatemala': 0.18249323,\n",
+       " 'Liberia': 0.05057681,\n",
+       " 'Senegal': 0.16743927,\n",
+       " 'South Africa': 0.60041939,\n",
+       " 'Peru': 0.32971846,\n",
+       " 'Lesotho': 0.02142249,\n",
+       " 'Bangladesh': 1.64689383,\n",
+       " 'Niger': 0.24206636,\n",
+       " 'Malawi': 0.19129952,\n",
+       " 'Guinea-Conakry': 0.13132792,\n",
+       " 'Sierra Leone': 0.07976983,\n",
+       " 'Afghanistan': 0.38928346,\n",
+       " 'China': 14.39323776,\n",
+       " 'Democratic Republic of the Congo': 0.89561404,\n",
+       " 'Sudan': 0.4384926}"
+      ]
+     },
+     "execution_count": 213,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "country_population = {\n",
     "    'Cameroon': 26545864,\n",
@@ -1295,7 +1342,10 @@
     "    'China': 1439323776,\n",
     "    'Democratic Republic of the Congo': 89561404,\n",
     "    'Sudan': 43849260\n",
-    "}\n"
+    "}\n",
+    "\n",
+    "country_population = {k: v/100000000 for k, v in country_population.items()}\n",
+    "country_population\n"
    ]
   },
   {
@@ -1344,7 +1394,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open(\"india_states_population.pickle\", \"wb\") as file:\n",
+    "    pickle.dump(india_states_population, file)\n",
+    "\n",
+    "with open(\"countries_population.pickle\", \"wb\") as file:\n",
+    "    pickle.dump(country_population, file)\n",
+    "\n",
+    "with open(\"countries_estimation.pickle\", \"wb\") as file:\n",
+    "    pickle.dump(country_estimation, file)\n",
+    "\n",
+    "# Load with:\n",
+    "# with open(\"india_states_population.pickle\", \"rb\") as file:\n",
+    "#     loaded_population_dict = pickle.load(file)"
+   ]
   }
  ],
  "metadata": {
