--- a/Alex/tester.ipynb
+++ b/Alex/tester.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 474,
    "metadata": {},
    "outputs": [
     {
@@ -70,6 +70,293 @@
     "        plt.text(j, i, round(data1[cols].corr().values[i, j], 2), ha='center', va='center', color='black')\n",
     "# make legend\n",
     "plt.colorbar();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 671,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error in Anguilla\n",
+      "Error in Cook Islands\n",
+      "Error in French Guiana\n",
+      "Error in Guadeloupe\n",
+      "Error in Martinique\n",
+      "Error in Netherlands Antilles\n",
+      "Error in Niue\n",
+      "Error in Réunion\n",
+      "Error in Tokelau\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Diagnosed</th>\n",
+       "      <th>Undiagnosed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>1</td>\n",
+       "      <td>23633.9</td>\n",
+       "      <td>12658.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Europe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>61425.1</td>\n",
+       "      <td>21935.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Middle East and North Africa</td>\n",
+       "      <td>1</td>\n",
+       "      <td>72671.9</td>\n",
+       "      <td>27330.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>North America and Caribbean</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50547.0</td>\n",
+       "      <td>12224.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>South and Central America</td>\n",
+       "      <td>1</td>\n",
+       "      <td>32497.1</td>\n",
+       "      <td>10671.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>Venezuela (Bolivarian Republic of)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2280.0</td>\n",
+       "      <td>456.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>Viet Nam</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3994.1</td>\n",
+       "      <td>2055.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>219</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>1</td>\n",
+       "      <td>613.9</td>\n",
+       "      <td>136.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>220</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>1</td>\n",
+       "      <td>726.3</td>\n",
+       "      <td>386.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>1</td>\n",
+       "      <td>106.4</td>\n",
+       "      <td>56.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>222 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                Country  Population  Diagnosed  Undiagnosed\n",
+       "0                                Africa           1    23633.9      12658.6\n",
+       "1                                Europe           1    61425.1      21935.0\n",
+       "2          Middle East and North Africa           1    72671.9      27330.5\n",
+       "3           North America and Caribbean           1    50547.0      12224.9\n",
+       "4             South and Central America           1    32497.1      10671.5\n",
+       "..                                  ...         ...        ...          ...\n",
+       "217  Venezuela (Bolivarian Republic of)           1     2280.0        456.0\n",
+       "218                            Viet Nam           1     3994.1       2055.9\n",
+       "219                               Yemen           1      613.9        136.6\n",
+       "220                              Zambia           1      726.3        386.9\n",
+       "221                            Zimbabwe           1      106.4         56.7\n",
+       "\n",
+       "[222 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 671,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_new = pd.read_excel(\"../Case/Health Data from International Diabetes Foundation.xlsx\", index_col=0, sheet_name=None, header=1)\n",
+    "data_undiag = data_new[\"People undiagnosed (1000s)\"][[\"Country/Territory\", 2021]]\n",
+    "data_diag = data_new[\"People with diabetes (1000s)\"][[\"Country/Territory\", 2021]]\n",
+    "\n",
+    "countries = data_diag[\"Country/Territory\"].unique()\n",
+    "# df = pd.DataFrame([\"Country\", \"Population\", \"Diagnosed\", \"Undiagnosed\"])\n",
+    "df = len(countries)*[None]\n",
+    "for i, country in enumerate(countries):\n",
+    "    try:\n",
+    "        country_pop = 1###\n",
+    "        country_diag = data_diag[data_diag[\"Country/Territory\"] == country][2021].values[0]\n",
+    "        country_diag = float(str(country_diag).replace(\",\", \"\"))\n",
+    "        \n",
+    "        country_undiag = data_undiag[data_undiag[\"Country/Territory\"] == country][2021].values[0]\n",
+    "        country_undiag = float(str(country_undiag).replace(\",\", \"\"))\n",
+    "        \n",
+    "        if country is None or country_diag is None or country_undiag is None:\n",
+    "            print(country, country_pop, country_diag, country_undiag)\n",
+    "        df[i] = [country, country_pop, country_diag, country_undiag]\n",
+    "    except:\n",
+    "        print(f\"Error in {country}\")\n",
+    "    \n",
+    "pd.DataFrame([i for i in df if i is not None], columns=[\"Country\", \"Population\", \"Diagnosed\", \"Undiagnosed\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 590,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\alexa\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sdv\\multi_table\\base.py:81: UserWarning: We strongly recommend saving the metadata using 'save_to_json' for replicability in future SDV versions.\n",
+      "  warnings.warn(\n",
+      "Preprocess Tables:   0%|          | 0/1 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Preprocess Tables: 100%|██████████| 1/1 [00:00<00:00, 28.65it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Learning relationships:\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Modeling Tables: 100%|██████████| 1/1 [00:00<00:00,  3.14it/s]\n",
+      "c:\\Users\\alexa\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\base.py:439: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.9445105800722\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4.82468222,  0.24942362, -0.24249592,  1.86395635,  1.44107493,\n",
+       "        5.13674117, -0.52522289])"
+      ]
+     },
+     "execution_count": 590,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "X = data1[[\"Hypertension Mean\", \"Generalized Obesity Mean\", \"Abdominal Obesity Mean\"]].values\n",
+    "\n",
+    "y = data1[\"Diabetes Mean\"].values\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "_combined = np.concatenate((X_train, y_train[:,np.newaxis]), axis=1)\n",
+    "\n",
+    "from sdv.datasets.local import load_csvs\n",
+    "from sdv.metadata import MultiTableMetadata\n",
+    "from sdv.multi_table import HMASynthesizer\n",
+    "metadata = MultiTableMetadata()\n",
+    "\n",
+    "# data = pd.read_csv(\"X.csv\", index_col=0)\n",
+    "data = pd.read_csv(\"X2.csv\", index_col=0)\n",
+    "data = {\"df1\": data}\n",
+    "\n",
+    "metadata.detect_from_dataframes(data)\n",
+    "metadata.update_column(table_name='df1', column_name='0', sdtype='numerical')\n",
+    "metadata.update_column(table_name='df1', column_name='1', sdtype='numerical')\n",
+    "metadata.update_column(table_name='df1', column_name='2', sdtype='numerical')\n",
+    "metadata.update_column(table_name='df1', column_name='3', sdtype='numerical')\n",
+    "\n",
+    "synthesizer = HMASynthesizer(metadata)\n",
+    "synthesizer.fit(data)\n",
+    "synthetic_data = synthesizer.sample(1000)\n",
+    "\n",
+    "X_synth = synthetic_data[\"df1\"][[\"0\",\"1\",\"2\"]]\n",
+    "y_synth = synthetic_data[\"df1\"][\"3\"].values\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_synth)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# model = LinearRegression()\n",
+    "model = MLPRegressor(hidden_layer_sizes=(100, 100), max_iter=1000)\n",
+    "\n",
+    "model.fit(X_train_scaled, y_synth)\n",
+    "y_pred = model.predict(X_test_scaled)\n",
+    "print(mean_squared_error(y_test, y_pred))\n",
+    "\n",
+    "y_test - y_pred"
    ]
   },
   {
