--- a/Alex/tester.ipynb
+++ b/Alex/tester.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
+    "# import matplotlib.pyplot as plt\n",
     "import math\n",
     "import re\n",
     "from collections import defaultdict\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -74,172 +74,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 671,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error in Anguilla\n",
-      "Error in Cook Islands\n",
-      "Error in French Guiana\n",
-      "Error in Guadeloupe\n",
-      "Error in Martinique\n",
-      "Error in Netherlands Antilles\n",
-      "Error in Niue\n",
-      "Error in Réunion\n",
-      "Error in Tokelau\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Population</th>\n",
-       "      <th>Diagnosed</th>\n",
-       "      <th>Undiagnosed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Africa</td>\n",
-       "      <td>1</td>\n",
-       "      <td>23633.9</td>\n",
-       "      <td>12658.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Europe</td>\n",
-       "      <td>1</td>\n",
-       "      <td>61425.1</td>\n",
-       "      <td>21935.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Middle East and North Africa</td>\n",
-       "      <td>1</td>\n",
-       "      <td>72671.9</td>\n",
-       "      <td>27330.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>North America and Caribbean</td>\n",
-       "      <td>1</td>\n",
-       "      <td>50547.0</td>\n",
-       "      <td>12224.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>South and Central America</td>\n",
-       "      <td>1</td>\n",
-       "      <td>32497.1</td>\n",
-       "      <td>10671.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>217</th>\n",
-       "      <td>Venezuela (Bolivarian Republic of)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2280.0</td>\n",
-       "      <td>456.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>218</th>\n",
-       "      <td>Viet Nam</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3994.1</td>\n",
-       "      <td>2055.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>219</th>\n",
-       "      <td>Yemen</td>\n",
-       "      <td>1</td>\n",
-       "      <td>613.9</td>\n",
-       "      <td>136.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>220</th>\n",
-       "      <td>Zambia</td>\n",
-       "      <td>1</td>\n",
-       "      <td>726.3</td>\n",
-       "      <td>386.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>221</th>\n",
-       "      <td>Zimbabwe</td>\n",
-       "      <td>1</td>\n",
-       "      <td>106.4</td>\n",
-       "      <td>56.7</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>222 rows × 4 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                Country  Population  Diagnosed  Undiagnosed\n",
-       "0                                Africa           1    23633.9      12658.6\n",
-       "1                                Europe           1    61425.1      21935.0\n",
-       "2          Middle East and North Africa           1    72671.9      27330.5\n",
-       "3           North America and Caribbean           1    50547.0      12224.9\n",
-       "4             South and Central America           1    32497.1      10671.5\n",
-       "..                                  ...         ...        ...          ...\n",
-       "217  Venezuela (Bolivarian Republic of)           1     2280.0        456.0\n",
-       "218                            Viet Nam           1     3994.1       2055.9\n",
-       "219                               Yemen           1      613.9        136.6\n",
-       "220                              Zambia           1      726.3        386.9\n",
-       "221                            Zimbabwe           1      106.4         56.7\n",
-       "\n",
-       "[222 rows x 4 columns]"
+       "[(14.79691, 6000.0, 88781.46), (7.46, 6000.0, 44760.0)]"
       ]
      },
-     "execution_count": 671,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import pickle\n",
+    "\n",
+    "# Load with:\n",
+    "with open(\"../Lucas/countries_population.pickle\", \"rb\") as file:\n",
+    "    loaded_population_dict = pickle.load(file)\n",
+    "    \n",
+    "with open(\"../Lucas/countries_estimation.pickle\", \"rb\") as file:\n",
+    "    loaded_estimation_dict = pickle.load(file)\n",
+    "    \n",
+    "loaded_population_dict[\"Côte d'Ivoire\"] = loaded_population_dict[\"Ivory Coast\"]\n",
+    "loaded_estimation_dict[\"Côte d'Ivoire\"] = loaded_estimation_dict[\"Ivory Coast\"]\n",
+    "loaded_population_dict.pop(\"Ivory Coast\")\n",
+    "loaded_estimation_dict.pop(\"Ivory Coast\")\n",
+    "\n",
+    "loaded_population_dict[\"Guinea\"] = loaded_population_dict[\"Guinea-Conakry\"]\n",
+    "loaded_estimation_dict[\"Guinea\"] = loaded_estimation_dict[\"Guinea-Conakry\"]\n",
+    "loaded_population_dict.pop(\"Guinea-Conakry\")\n",
+    "loaded_estimation_dict.pop(\"Guinea-Conakry\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data_new = pd.read_excel(\"../Case/Health Data from International Diabetes Foundation.xlsx\", index_col=0, sheet_name=None, header=1)\n",
     "data_undiag = data_new[\"People undiagnosed (1000s)\"][[\"Country/Territory\", 2021]]\n",
     "data_diag = data_new[\"People with diabetes (1000s)\"][[\"Country/Territory\", 2021]]\n",
     "\n",
-    "countries = data_diag[\"Country/Territory\"].unique()\n",
+    "\n",
+    "\n",
+    "countries = loaded_population_dict.keys()\n",
     "# df = pd.DataFrame([\"Country\", \"Population\", \"Diagnosed\", \"Undiagnosed\"])\n",
     "df = len(countries)*[None]\n",
     "for i, country in enumerate(countries):\n",
     "    try:\n",
-    "        country_pop = 1###\n",
+    "        country_pop = loaded_population_dict[country] * 1e8\n",
+    "        \n",
     "        country_diag = data_diag[data_diag[\"Country/Territory\"] == country][2021].values[0]\n",
-    "        country_diag = float(str(country_diag).replace(\",\", \"\"))\n",
+    "        country_diag = float(str(country_diag).replace(\",\", \"\"))*1000 / country_pop\n",
     "        \n",
     "        country_undiag = data_undiag[data_undiag[\"Country/Territory\"] == country][2021].values[0]\n",
-    "        country_undiag = float(str(country_undiag).replace(\",\", \"\"))\n",
+    "        country_undiag = float(str(country_undiag).replace(\",\", \"\"))*1000 / country_pop\n",
+    "        \n",
+    "        country_pop /= 1e8\n",
     "        \n",
     "        if country is None or country_diag is None or country_undiag is None:\n",
     "            print(country, country_pop, country_diag, country_undiag)\n",
@@ -247,12 +142,181 @@
     "    except:\n",
     "        print(f\"Error in {country}\")\n",
     "    \n",
-    "pd.DataFrame([i for i in df if i is not None], columns=[\"Country\", \"Population\", \"Diagnosed\", \"Undiagnosed\"])"
+    "the_df = pd.DataFrame([i for i in df if i is not None], columns=[\"Country\", \"Population\", \"Diagnosed\", \"Undiagnosed\"])\n",
+    "the_df.set_index(\"Country\", inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "the_the_df = []\n",
+    "for country, projs in loaded_estimation_dict.items():\n",
+    "    for dollar_per_screening, _, money_spent in projs:\n",
+    "        pop, undiag, diag = the_df.loc[country]\n",
+    "        the_the_df.append([pop, diag, undiag, money_spent, dollar_per_screening])\n",
+    "DF = np.array(the_the_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 1000/1000 [00:02<00:00, 491.34it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch.optim import Adam\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "import torch.nn.functional as F\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "class ClassifierModule(nn.Module):\n",
+    "    def __init__(self, n_hidden):\n",
+    "        super().__init__()\n",
+    "        self.layers = nn.ModuleList()\n",
+    "        \n",
+    "        # simple CNN\n",
+    "        self.layers.append(\n",
+    "            nn.Sequential(\n",
+    "                nn.Linear(4, n_hidden),\n",
+    "                nn.ReLU(),\n",
+    "                nn.Linear(n_hidden, 1)\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        for l in self.layers:\n",
+    "            X = l(X)\n",
+    "        return X\n",
+    "\n",
+    "\n",
+    "def train_model(n_hidden, lr, X_train, batch_size):\n",
+    "    max_steps = 1000\n",
+    "\n",
+    "    model = ClassifierModule(n_hidden).to(device)\n",
+    "    optim = Adam(model.parameters(), lr=lr)\n",
+    "\n",
+    "    model.train()\n",
+    "\n",
+    "    # Record start time\n",
+    "    # start_event = torch.cuda.Event(enable_timing=True)\n",
+    "    # end_event = torch.cuda.Event(enable_timing=True)\n",
+    "    # start_event.record()\n",
+    "\n",
+    "    loss_list = []\n",
+    "    for step in tqdm(range(max_steps)):\n",
+    "        ix = torch.randint(0, len(X_train), (batch_size,))\n",
+    "        Xb, Yb = X_train[ix], y_train[ix]\n",
+    "        \n",
+    "        logits = model(Xb)\n",
+    "        loss = nn.MSELoss()(logits, Yb.float().view(-1, 1))\n",
+    "        loss_list.append(loss.item())\n",
+    "        \n",
+    "        optim.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optim.step()\n",
+    "\n",
+    "        # # Record end time\n",
+    "        # end_event.record()\n",
+    "        # torch.cuda.synchronize()\n",
+    "\n",
+    "        # Break if time limit exceeded\n",
+    "        # if start_event.elapsed_time(end_event) > max_time:\n",
+    "        #     break\n",
+    "\n",
+    "        # Record start time for next iteration\n",
+    "        # end_event.record()\n",
+    "        # torch.cuda.synchronize()\n",
+    "        \n",
+    "        # if start_event.elapsed_time(end_event) > max_time:\n",
+    "        #     break\n",
+    "        \n",
+    "    return model, loss_list\n",
+    "\n",
+    "X = DF[:, :-1]\n",
+    "y = DF[:, -1]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "X_train = torch.tensor(X_train, dtype=torch.float32).to(device)\n",
+    "X_test = torch.tensor(X_test, dtype=torch.float32).to(device)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.long).to(device)\n",
+    "y_test = torch.tensor(y_test, dtype=torch.long).to(device)\n",
+    "\n",
+    "model,loss_list = train_model(1000, 0.001, X_train, 16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "565.3908756889753\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([-4.83727668e+00, -1.92220386e+00,  5.67356357e+00,  8.87236845e-01,\n",
+       "        3.83145773e+00,  1.46492055e+00, -5.87925877e-05, -9.83059162e+00,\n",
+       "        1.45663248e+02, -2.64631703e+00,  1.00775151e+01, -3.18302130e+00,\n",
+       "       -8.51321093e+00,  2.36154848e+01,  1.32116199e+00,  1.42310413e+00,\n",
+       "       -4.42622639e-01,  4.23803814e+00,  3.04579246e+00, -3.38336661e+01,\n",
+       "        2.06100111e+00, -3.34611218e+01,  3.99054989e+00,  3.06796677e+01,\n",
+       "        7.98827642e+00, -1.65526102e+01, -4.85906541e+00,  4.54969593e+00,\n",
+       "        1.80353223e+01,  5.10083024e+00,  5.98736803e+00, -1.18674986e+00,\n",
+       "       -5.44908821e+00, -1.72661764e+00, -2.70753511e+01,  5.44282165e+00,\n",
+       "        6.12072638e-01, -4.93239372e+00, -3.69249445e+00,  3.61256594e-01,\n",
+       "        3.96863900e+00,  5.49012882e+00, -1.12352590e+01, -1.26981179e+01,\n",
+       "       -9.32975184e+00,  6.73219832e+00, -1.22850841e+01, -2.24240266e+01,\n",
+       "        6.97133034e+00, -9.98966547e+00])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "X = DF[:, :-1]\n",
+    "y = DF[:, -1]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# model = MLPRegressor(hidden_layer_sizes=(1000, 1000, 1000, 1000), max_iter=1000)\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "model.fit(X_train, y_train)\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "print(mean_squared_error(y_test, y_pred))\n",
+    "y_test - y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -309,12 +373,6 @@
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.neural_network import MLPRegressor\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
     "X = data1[[\"Hypertension Mean\", \"Generalized Obesity Mean\", \"Abdominal Obesity Mean\"]].values\n",
     "\n",
     "y = data1[\"Diabetes Mean\"].values\n",
@@ -361,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 407,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 406,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
