--- a/Lucas/healthdata.ipynb
+++ b/Lucas/healthdata.ipynb
@@ -446,6 +446,7 @@
     "\n",
     "for region, values in regions.items():\n",
     "    plt.plot(years, list(values.values()), label=region)\n",
+    "    print(list(values.values()))\n",
     "\n",
     "plt.title('Population Projection by Region')\n",
     "plt.xlabel('Year')\n",
