--- a/Lucas/tester.ipynb
+++ b/Lucas/tester.ipynb
@@ -312,6 +312,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), \"model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RegressorModule(\n",
+       "  (layers): ModuleList(\n",
+       "    (0): Sequential(\n",
+       "      (0): Linear(in_features=4, out_features=2000, bias=True)\n",
+       "      (1): Tanh()\n",
+       "      (2): Linear(in_features=2000, out_features=4000, bias=True)\n",
+       "      (3): Tanh()\n",
+       "      (4): Linear(in_features=4000, out_features=2000, bias=True)\n",
+       "      (5): Tanh()\n",
+       "      (6): Linear(in_features=2000, out_features=1, bias=True)\n",
+       "    )\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_model = RegressorModule(2000)\n",
+    "new_model.load_state_dict(torch.load(\"model\"))\n",
+    "new_model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 170,
    "metadata": {},
    "outputs": [],
@@ -351,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +416,7 @@
        "         5.6592, 13.9704], grad_fn=<SelectBackward0>)"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +446,7 @@
        "        9.2206e+00, 5.4403e+00], dtype=torch.float64)"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +466,7 @@
        "tensor(8.3140, dtype=torch.float64, grad_fn=<MeanBackward0>)"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
