--- a/Alex/tester.ipynb
+++ b/Alex/tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(74194.7, 39397.4)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "india_diag, india_undiag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Andhra Pradesh', 'Arunachal Pradesh', 'Assam', 'Bihar', 'Chandigarh', 'Chhattisgarh', 'Delhi', 'Goa', 'Gujarat', 'Haryana', 'Himachal Pradesh', 'Jharkhand', 'Karnataka', 'Kerala', 'Madhya Pradesh', 'Maharashtra', 'Manipur', 'Meghalaya', 'Mizoram', 'Nagaland', 'Odisha', 'Puducherry', 'Punjab', 'Rajasthan', 'Sikkim', 'Tamil Nadu', 'Telangana', 'Tripura', 'Uttar Pradesh', 'Uttarakhand', 'West Bengal'])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "india_states_population.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Andhra Pradesh': array([3072493.401     , 1631494.58811151]),\n",
+       " 'Arunachal Pradesh': array([56536.488     , 30020.88602462]),\n",
+       " 'Assam': array([1431402.9678    ,  760075.25178488]),\n",
+       " 'Bihar': array([4043517.6024    , 2147108.62620637]),\n",
+       " 'Chandigarh': array([144384.7536    ,  76668.33198976]),\n",
+       " 'Chhattisgarh': array([1819159.0758   ,  965973.8198675]),\n",
+       " 'Delhi': array([1998326.4696    , 1061111.74050733]),\n",
+       " 'Goa': array([251262.        , 133420.17042727]),\n",
+       " 'Gujarat': array([3142522.0308    , 1668679.80403236]),\n",
+       " 'Haryana': array([2153220.2952    , 1143360.39175457]),\n",
+       " 'Himachal Pradesh': array([591941.034     , 314320.80314243]),\n",
+       " 'Jharkhand': array([1667258.5536    ,  885314.61330258]),\n",
+       " 'Karnataka': array([4296986.8296    , 2281700.83470225]),\n",
+       " 'Kerala': array([5462014.779     , 2900330.90037664]),\n",
+       " 'Madhya Pradesh': array([3636291.909     , 1930871.70452386]),\n",
+       " 'Maharashtra': array([7610312.9814    , 4041077.65990574]),\n",
+       " 'Manipur': array([122425.182     ,  65007.79523776]),\n",
+       " 'Meghalaya': array([105041.352     ,  55776.97815726]),\n",
+       " 'Mizoram': array([57253.0728    , 30401.39269154]),\n",
+       " 'Nagaland': array([80989.02      , 43005.18522951]),\n",
+       " 'Odisha': array([2697938.6388    , 1432605.93719308]),\n",
+       " 'Puducherry': array([237693.0354    , 126215.04760944]),\n",
+       " 'Punjab': array([2313065.097     , 1228238.01231824]),\n",
+       " 'Rajasthan': array([3306133.7112    , 1755557.63785865]),\n",
+       " 'Sikkim': array([53011.2768    , 28148.99819799]),\n",
+       " 'Tamil Nadu': array([6725485.4688   , 3571234.0801769]),\n",
+       " 'Telangana': array([2338146.2808    , 1241556.12575009]),\n",
+       " 'Tripura': array([282712.0332    , 150120.14411803]),\n",
+       " 'Uttar Pradesh': array([6938749.3248    , 3684477.22881655]),\n",
+       " 'Uttarakhand': array([749307.1428    , 397882.23724537]),\n",
+       " 'West Bengal': array([8187884.7066    , 4347768.35730588])}"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pickle\n",
+    "with open(\"../Lucas/india_states_population.pickle\", \"rb\") as file:\n",
+    "    india_states_population = pickle.load(file)\n",
+    "\n",
+    "india_diag = float((data_diag[data_diag[\"Country/Territory\"] == \"India\"][2021].values[0]).replace(\",\",\"\"))*1000\n",
+    "india_undiag = float((data_undiag[data_undiag[\"Country/Territory\"] == \"India\"][2021].values[0]).replace(\",\",\"\"))*1000\n",
+    "\n",
+    "data1 = pd.read_excel(\"ICMR-INDIAB_modified.xlsx\", index_col=0)\n",
+    "\n",
+    "india_states_dicter = {}\n",
+    "for country in india_states_population.keys():\n",
+    "    diag_pop = data1.loc[data1[\"State\"] == country, \"Diabetes Mean\"]/100 * india_states_population[country]\n",
+    "    undiag_pop = diag_pop * india_undiag / india_diag\n",
+    "    india_states_dicter[country] = ([float(diag_pop), float(undiag_pop)])\n",
+    "\n",
+    "indistate = {c: (np.array(list(india_states_dicter.values()))*0.6)[i] for i, c in enumerate(india_states_dicter.keys())}\n",
+    "\n",
+    "indistate"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -74,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +190,7 @@
        "[(14.79691, 6000.0, 88781.46), (7.46, 6000.0, 44760.0)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1000/1000 [00:02<00:00, 491.34it/s]\n"
+      "100%|██████████| 1000/1000 [00:02<00:00, 426.65it/s]\n"
      ]
     }
    ],
@@ -202,7 +309,7 @@
     "\n",
     "\n",
     "def train_model(n_hidden, lr, X_train, batch_size):\n",
-    "    max_steps = 1000\n",
+    "    max_steps = 1_000\n",
     "\n",
     "    model = ClassifierModule(n_hidden).to(device)\n",
     "    optim = Adam(model.parameters(), lr=lr)\n",
@@ -254,12 +361,19 @@
     "y_train = torch.tensor(y_train, dtype=torch.long).to(device)\n",
     "y_test = torch.tensor(y_test, dtype=torch.long).to(device)\n",
     "\n",
-    "model,loss_list = train_model(1000, 0.001, X_train, 16)"
+    "model,loss_list = train_model(1000, 0.01, X_train, 16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +401,7 @@
        "        6.97133034e+00, -9.98966547e+00])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,6 +533,215 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error at project 1739\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>12</th>\n",
+       "      <th>13</th>\n",
+       "      <th>14</th>\n",
+       "      <th>15</th>\n",
+       "      <th>16</th>\n",
+       "      <th>17</th>\n",
+       "      <th>18</th>\n",
+       "      <th>19</th>\n",
+       "      <th>20</th>\n",
+       "      <th>21</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>7.000000e+00</td>\n",
+       "      <td>1.500000e+01</td>\n",
+       "      <td>2.000000e+01</td>\n",
+       "      <td>3.000000e+01</td>\n",
+       "      <td>3.700000e+01</td>\n",
+       "      <td>4.800000e+01</td>\n",
+       "      <td>5.200000e+01</td>\n",
+       "      <td>4.400000e+01</td>\n",
+       "      <td>4.400000e+01</td>\n",
+       "      <td>3.700000e+01</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.300000e+01</td>\n",
+       "      <td>5.900000e+01</td>\n",
+       "      <td>6.300000e+01</td>\n",
+       "      <td>5.700000e+01</td>\n",
+       "      <td>3.100000e+01</td>\n",
+       "      <td>1.700000e+01</td>\n",
+       "      <td>2.600000e+01</td>\n",
+       "      <td>2.100000e+01</td>\n",
+       "      <td>1.500000e+01</td>\n",
+       "      <td>1.200000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.358936e+07</td>\n",
+       "      <td>3.458213e+07</td>\n",
+       "      <td>2.228854e+07</td>\n",
+       "      <td>4.033724e+07</td>\n",
+       "      <td>5.006131e+07</td>\n",
+       "      <td>9.742286e+07</td>\n",
+       "      <td>7.550832e+07</td>\n",
+       "      <td>7.995982e+07</td>\n",
+       "      <td>6.652366e+07</td>\n",
+       "      <td>4.979081e+07</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.016923e+07</td>\n",
+       "      <td>7.122110e+07</td>\n",
+       "      <td>8.794690e+07</td>\n",
+       "      <td>9.320703e+07</td>\n",
+       "      <td>7.199304e+07</td>\n",
+       "      <td>1.109863e+08</td>\n",
+       "      <td>1.399884e+08</td>\n",
+       "      <td>1.196878e+08</td>\n",
+       "      <td>7.001722e+07</td>\n",
+       "      <td>9.615010e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.365101e+06</td>\n",
+       "      <td>2.303939e+06</td>\n",
+       "      <td>1.113870e+06</td>\n",
+       "      <td>1.344127e+06</td>\n",
+       "      <td>1.352643e+06</td>\n",
+       "      <td>2.029220e+06</td>\n",
+       "      <td>1.451804e+06</td>\n",
+       "      <td>1.816856e+06</td>\n",
+       "      <td>1.511558e+06</td>\n",
+       "      <td>1.345334e+06</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.398959e+06</td>\n",
+       "      <td>1.206933e+06</td>\n",
+       "      <td>1.395761e+06</td>\n",
+       "      <td>1.634924e+06</td>\n",
+       "      <td>2.321607e+06</td>\n",
+       "      <td>6.524770e+06</td>\n",
+       "      <td>5.382100e+06</td>\n",
+       "      <td>5.696705e+06</td>\n",
+       "      <td>4.664705e+06</td>\n",
+       "      <td>8.005837e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             0             1             2             3             4   \\\n",
+       "0  7.000000e+00  1.500000e+01  2.000000e+01  3.000000e+01  3.700000e+01   \n",
+       "1  2.358936e+07  3.458213e+07  2.228854e+07  4.033724e+07  5.006131e+07   \n",
+       "2  3.365101e+06  2.303939e+06  1.113870e+06  1.344127e+06  1.352643e+06   \n",
+       "\n",
+       "             5             6             7             8             9   ...  \\\n",
+       "0  4.800000e+01  5.200000e+01  4.400000e+01  4.400000e+01  3.700000e+01  ...   \n",
+       "1  9.742286e+07  7.550832e+07  7.995982e+07  6.652366e+07  4.979081e+07  ...   \n",
+       "2  2.029220e+06  1.451804e+06  1.816856e+06  1.511558e+06  1.345334e+06  ...   \n",
+       "\n",
+       "             12            13            14            15            16  \\\n",
+       "0  4.300000e+01  5.900000e+01  6.300000e+01  5.700000e+01  3.100000e+01   \n",
+       "1  6.016923e+07  7.122110e+07  8.794690e+07  9.320703e+07  7.199304e+07   \n",
+       "2  1.398959e+06  1.206933e+06  1.395761e+06  1.634924e+06  2.321607e+06   \n",
+       "\n",
+       "             17            18            19            20            21  \n",
+       "0  1.700000e+01  2.600000e+01  2.100000e+01  1.500000e+01  1.200000e+01  \n",
+       "1  1.109863e+08  1.399884e+08  1.196878e+08  7.001722e+07  9.615010e+07  \n",
+       "2  6.524770e+06  5.382100e+06  5.696705e+06  4.664705e+06  8.005837e+06  \n",
+       "\n",
+       "[3 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def get_wdf(data):\n",
+    "    mask_approved = data[\"Board approval date\"].notna()\n",
+    "    \n",
+    "    _approved_projects = np.bincount([int(re.split('-|/', i)[-1]) for i in data[\"Board approval date\"][mask_approved]])[2002:]\n",
+    "    _approved_projects = np.append(_approved_projects, (22-len(_approved_projects))*[0])\n",
+    "    \n",
+    "    _dicter = {year: 0 for year in range(2002, 2024)}\n",
+    "    converter = {\"USD\": 6.93, \"EUR\": 7.46, \"DKK\": 1}\n",
+    "    for i, project in data[mask_approved].iterrows():\n",
+    "        try:\n",
+    "            year = int(re.split('-|/', project[\"Board approval date\"])[-1])\n",
+    "            _dicter[year] += project[\"Total Revised WDF Contibution\"] * converter[project[\"WDF Grant Currency\"]]\n",
+    "        except: print(f\"Error at project {i}\")\n",
+    "        \n",
+    "    _approved_spending = list(_dicter.values())\n",
+    "    _spending_per_project = [x / (y+0.01) for x, y in zip(_approved_spending, _approved_projects)]\n",
+    "    return _approved_projects, _approved_spending, _spending_per_project\n",
+    "\n",
+    "data_wdf = pd.read_excel('../Case/Milestones Case Data.xlsx', sheet_name=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error at project 1739\n",
+      "Error at project 1739\n",
+      "Error at project 1739\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_tingin = [[str(i) for i in range(2002,2024)],\n",
+    "get_wdf(data_wdf[\"Projects\"])[0],\n",
+    "[i/100_000 for i in get_wdf(data_wdf[\"Projects\"])[1]],\n",
+    "[i/100_000 for i in get_wdf(data_wdf[\"Projects\"])[2]]]\n",
+    "\n",
+    "pd.DataFrame(zip(*data_tingin), columns=[\"Year\", \"Projects\", \"Spending\", \"Spending per project\"]).to_csv(\"wdf_thing.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -461,25 +784,6 @@
     }
    ],
    "source": [
-    "def get_wdf(data):\n",
-    "    mask_approved = data[\"Board approval date\"].notna()\n",
-    "    \n",
-    "    _approved_projects = np.bincount([int(re.split('-|/', i)[-1]) for i in data[\"Board approval date\"][mask_approved]])[2002:]\n",
-    "    _approved_projects = np.append(_approved_projects, (22-len(_approved_projects))*[0])\n",
-    "    \n",
-    "    _dicter = {year: 0 for year in range(2002, 2024)}\n",
-    "    converter = {\"USD\": 6.93, \"EUR\": 7.46, \"DKK\": 1}\n",
-    "    for i, project in data[mask_approved].iterrows():\n",
-    "        try:\n",
-    "            year = int(re.split('-|/', project[\"Board approval date\"])[-1])\n",
-    "            _dicter[year] += project[\"Total Revised WDF Contibution\"] * converter[project[\"WDF Grant Currency\"]]\n",
-    "        except: print(f\"Error at project {i}\")\n",
-    "        \n",
-    "    _approved_spending = list(_dicter.values())\n",
-    "    _spending_per_project = [x / (y+0.01) for x, y in zip(_approved_spending, _approved_projects)]\n",
-    "    return _approved_projects, _approved_spending, _spending_per_project\n",
-    "\n",
-    "\n",
     "def plot_wdf(data):    \n",
     "    plt.plot(range(2002,2024), data[1])\n",
     "    plt.xticks(range(2002, 2024), rotation=45)\n",
