--- a/Lucas/iqvia.ipynb
+++ b/Lucas/iqvia.ipynb
@@ -414,6 +414,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "years = list(volume['Novo Nordisk'].keys())\n",
+    "novonordisk_values = list(volume['Novo Nordisk'].values())\n",
+    "other_values = list(volume['Other'].values())\n",
+    "total = [[y, n, o] for y, n, o in zip(years, novonordisk_values, other_values)]\n",
+    "df = pd.DataFrame(total, columns=[\"Year\", \"Novo Nordisk\", \"Other\"])\n",
+    "df.to_csv(\"volume.csv\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -781,6 +795,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 317,
    "metadata": {},
    "outputs": [],
@@ -793,6 +814,21 @@
     "\n",
     "novonordisk_cost = [rev / (vol * 1000000) for rev, vol in zip(novonordisk_sales_values, novonordisk_volume_values)]\n",
     "other_cost = [rev / (vol * 1000000) for rev, vol in zip(other_sales_values, other_volume_values)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 333,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "novonordisk_cost = [rev / (vol * 1000000) for rev, vol in zip(novonordisk_sales_values, novonordisk_volume_values)]\n",
+    "other_cost = [rev / (vol * 1000000) for rev, vol in zip(other_sales_values, other_volume_values)]\n",
+    "years = list(sales['Novo Nordisk'].keys())\n",
+    "\n",
+    "total = [[y, n, o] for y, n, o in zip(years, novonordisk_cost, other_cost)]\n",
+    "df = pd.DataFrame(total, columns=[\"Year\", \"Novo Nordisk\", \"Other\"])\n",
+    "df.to_csv(\"cost.csv\")"
    ]
   },
   {
