--- a/Lucas/tester.ipynb
+++ b/Lucas/tester.ipynb
@@ -148,12 +148,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"india_states_population.pickle\", \"rb\") as file:\n",
+    "    loaded_india_pop_dict = pickle.load(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "the_the_df = []\n",
-    "for country, projs in loaded_estimation_dict.items():\n",
+    "for state, projs in loaded_estimation_dict.items():\n",
     "    for dollar_per_screening, _, money_spent in projs:\n",
     "        pop, undiag, diag = the_df.loc[country]\n",
     "        the_the_df.append([pop, diag, undiag, money_spent, dollar_per_screening])\n",
@@ -397,6 +407,76 @@
    ],
    "source": [
     "plt.semilogy(loss_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.3220, -0.3221, -0.3221,  1.8955],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.2383],\n",
+       "        [-0.3217, -0.3221, -0.3221,  0.1836],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.2577],\n",
+       "        [-0.3217, -0.3221, -0.3221,  0.4871],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.4896],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.3026],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.1027],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.8685],\n",
+       "        [-0.3217, -0.3221, -0.3221,  1.8495],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.0788],\n",
+       "        [-0.3221, -0.3221, -0.3221,  1.0446],\n",
+       "        [-0.3217, -0.3221, -0.3221,  0.1656],\n",
+       "        [-0.3220, -0.3221, -0.3221,  1.5604],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.2528],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.6464],\n",
+       "        [-0.3221, -0.3221, -0.3221,  1.2422],\n",
+       "        [-0.3220, -0.3221, -0.3221,  0.4904],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.1211],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.2751],\n",
+       "        [-0.3221, -0.3221, -0.3221,  1.2385],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.2974],\n",
+       "        [-0.3217, -0.3221, -0.3221,  0.5173],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.5282],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.7198],\n",
+       "        [-0.3221, -0.3221, -0.3221,  7.6158],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.2628],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.0665],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.0792],\n",
+       "        [-0.3217, -0.3221, -0.3221,  0.3564],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.1584],\n",
+       "        [-0.3221, -0.3221, -0.3221,  1.3627],\n",
+       "        [-0.3220, -0.3221, -0.3221,  5.3805],\n",
+       "        [-0.3221, -0.3221, -0.3221,  1.9910],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.2720],\n",
+       "        [-0.3217, -0.3221, -0.3221,  1.5503],\n",
+       "        [-0.3220, -0.3221, -0.3221,  0.3264],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.6631],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.1756],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.9200],\n",
+       "        [-0.3217, -0.3221, -0.3221,  0.5132],\n",
+       "        [-0.3217, -0.3221, -0.3221,  0.1684],\n",
+       "        [-0.3217, -0.3221, -0.3221,  5.1472],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.0859],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.0841],\n",
+       "        [-0.3220, -0.3221, -0.3221,  0.7528],\n",
+       "        [-0.3220, -0.3221, -0.3221,  4.6190],\n",
+       "        [-0.3221, -0.3221, -0.3221,  0.5855],\n",
+       "        [-0.3221, -0.3221, -0.3221, -0.0810],\n",
+       "        [-0.3221, -0.3221, -0.3221,  4.5148]])"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"india_states_population.pickle\", \"rb\") as file:\n",
+    "    loaded_population_dict = pickle.load(file)"
    ]
   },
   {
